<resources>
    <string name="app_name">ICB0007-UF1-PR01-samuelmateostovar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="logo">logo</string>
    <string name="astro_lab">Astro Lab</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="powered_by">POWERED BY</string>
    <string name="logoSpacex" />
    <string name="launch">Launch</string>
    <string name="astro_lab_logo">Astro Lab Logo</string>
    <string name="logotexto">logoTexto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="rocket_list">ROCKET LIST</string>
    <string name="logo_item_rocket">logo-item-rocket</string>
    <string name="actualuser">\@actualUser</string>
    <string name="rocket_name">Rocket Name</string>
    <string name="active">Active</string>
    <string name="cost_per_launch">Cost per launch</string>
    <string name="success_rate">Success rate</string>
    <string name="dimensions">Dimensions</string>
    <string name="description">Description</string>
    <string name="country">Country</string>
    <string name="company">Company</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="diameter">Diameter</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="rocket_status">Rocket Status</string>
    <string name="status">Status</string>
    <string name="type">Type</string>
    <string name="height">Height</string>
    <string name="meters">Meters</string>
    <string name="feet">Feet</string>
    <string name="name">Name</string>
    <string name="est_activo">¿Está activo?</string>
    <string name="fabricar">Fabricar</string>
    <string name="search">Search</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="aniadir_nuevo_cohete">Crear cohete</string>
    <string name="altura">Altura</string>
    <string name="di_metro">Diámetro</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
</resources>