<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.fragments.LoginFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/centeredContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132">

        <ImageView
            android:id="@+id/textView"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/astro_lab_logo"
            android:src="@drawable/astro_lab"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/centeredContainer" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/login"
            android:textColor="@color/theme"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/centeredContainer"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@id/centeredContainer"
            app:layout_constraintTop_toBottomOf="@id/textView" />

        <EditText
            android:id="@+id/et_userName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="68dp"
            android:autofillHints="admin"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColorHint="@color/theme"
            app:layout_constraintEnd_toEndOf="@id/centeredContainer"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="@id/centeredContainer"
            app:layout_constraintTop_toBottomOf="@id/tv_login"  />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:autofillHints="admin1234"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/theme"
            app:layout_constraintEnd_toEndOf="@id/centeredContainer"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/centeredContainer"
            app:layout_constraintTop_toBottomOf="@id/et_userName" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:backgroundTint="#499DBA"
            android:textColor="@color/theme"
            android:text="@string/launch"
            app:layout_constraintEnd_toEndOf="@id/centeredContainer"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@id/centeredContainer"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_login"
            app:layout_constraintVertical_bias="0.856"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/textPowered"
                android:layout_width="90dp"
                android:layout_height="20dp"
                android:layout_marginEnd="12dp"
                android:textColor="@color/theme"
                android:text="@string/powered_by" />

            <ImageView
                android:id="@+id/iv_spacex"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:contentDescription="@string/powered_by"
                android:src="@drawable/spacex" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>